# soundcork

./: .dockerignore  .env.shared  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  bmx.py  config.py  gunicorn_conf.py  main.py  marge.py  model.py  nginx-ETag.conf  pyproject.toml  requirements.txt  run_nginx.sh  soundcork.service.example
.github/workflows/: docker-publish.yml  lint.yml
.opencode/plans/: 2026-02-17-documentation-design.md  2026-02-17-documentation-implementation.md
docs/: API_Spec.md  architecture.md  deployment.md  radio-browser.md  security-findings.md  speaker-setup.md  spotify.md
docs/plans/: 2026-02-17-management-api.md  2026-02-19-webui-session-auth.md  2026-02-19-webui.md  2026-02-20-oidc-webui-auth.md
examples/: DeviceInfo.xml  Presets.xml  Recents.xml  Sources.xml
scripts/: spotify-boot-primer  spotify-prime-speaker  spotify-primer.conf.example
soundcork/: .env.shared  bmx.py  bmx_services.json  config.py  constants.py  datastore.py  devices.py  gunicorn_conf.py  main.py  marge.py  mgmt.py  mgmt_auth.py  model.py  oidc.py  proxy.py  siriusxm_fastapi.py  speaker_allowlist.py  spotify_service.py  utils.py  zeroconf_primer.py
soundcork/webui/: auth.py  routes.py
soundcork/webui/static/: app.js  index.html  login.html  style.css
tests/: test_ip_restriction.py  test_oidc_auth.py  test_speaker_allowlist.py  test_webui_auth.py
