[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "soundcork"
version = "0.0.2"

description = "A replacement server for Bose SoundTouch devices."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]

authors = [{ name = "Deborah Kaplan" }, { name = "Allen Petersen" }]
maintainers = [{ name = "Deborah Kaplan" }, { name = "Allen Petersen" }]

requires-python = ">=3.12"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages]
find = {}
