[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "soundcork"
version = "0.0.2"

description = "A replacement server for Bose SoundTouch devices."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]

authors = [{ name = "Deborah Kaplan" }, { name = "Allen Petersen" }]
maintainers = [{ name = "Deborah Kaplan" }, { name = "Allen Petersen" }]

requires-python = ">=3.12"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages]
find = {}

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"soundcork/main.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["soundcork"]

[tool.pytest.ini_options]
filterwarnings = ["error::SyntaxWarning"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]